# psql2bigquery

./: .gitignore  Makefile  README.md  pyproject.toml  requirements.txt  setup.cfg
.github/workflows/: main.yaml  release.yaml
psql2bigquery/: __init__.py  __main__.py  main.py  run.py
psql2bigquery/tools/: bigquery.py  config.py  logging.py  psql.py
