[tool.poetry]
name = "psql2bigquery"
version = "0.1.0"
description = "Export PostgreSQL databases to Google Cloud Platform BigQuery"
authors = ["Joao Daher <joao@daher.dev>"]
repository = "https://github.com/CraveFood/psql2bigquery"
readme = "README.md"
keywords = ["postgresql", "bigquery", "sink"]
packages = [
    { include = "psql2bigquery" },
]


[tool.poetry.dependencies]
python = ">=3.8,<3.10"
psycopg2-binary = "*"
google-cloud-bigquery = { version = ">=2,<3" }


[tool.poetry.dev-dependencies]
pylint = "*"
black = "*"


[tool.black]
line-length = 120
target-version = ['py39']


[tool.pylint.messages_control]
disable = "C0330, C0326, C0114, C0115, C0116, W0212, W0511, W0613, W1203, W0221, R0901, R0903, R0913, R0201, R0801"

[tool.pylint.format]
max-line-length = "120"

[tool.pylint.basic]
good-names= "i, j, k, m, n, dt, db, id, pk, tz, qs, ex, _"


[build-system]
requires = ["poetry"]
build-backend = "poetry.masonry.api"
